# LychSim

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.agents/skills/build-a-feature/: SKILL.md
.agents/skills/distill-and-retrieve-branch-reusable-knowledge/: SKILL.md
.agents/skills/review-code-by-other/: SKILL.md
.codex/: config.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml
docs/: conf.py
docs/_ext/: mybadges.py  mytoctree.py
docs/_templates/: layout.html  navbar-logo.html  navbar-nav.html  theme-version.html
docs/_templates/sections/: header.html
example_scripts/infinigen/: load_and_save_scene.py  visualize_infinigen_bbox3d.py  visualize_infinigen_regions.py
notebooks/: collect_rules_helpers.py  data_collection_helpers.py  data_collection_outdoor_helpers.py  lychsim_collect_rules.ipynb  lychsim_glb_exporter.ipynb  lychsim_plugin_intro.ipynb
scripts/: compute_spawn_offsets.py  precompute_sampling_params.py
skills/: plan_scene.md
src/lychsim/api/: __init__.py  api.py  automation.py  client.py  launcher.py  util.py
src/lychsim/cli/: __init__.py  __main__.py  engine_lookup.py  home.py  interactive.py  launch.py  log_viewer.py  main.py  path_detect.py  path_registry.py  runs_registry.py
src/lychsim/core/: __init__.py  bbox.py  object.py
src/lychsim/mcp/: __init__.py  __main__.py  server.py
src/lychsim/utils/: __init__.py  camera_projection_utils.py  colors.py  general.py  (+4 more)
tests/: conftest.py  test_connection.py  test_control.py  test_visual.py
ue_plugin/LychSim/: LychSim.uplugin
(+101 files in other folders)
