[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lychsim"
version = "1.0.0"
description = "LychSim"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Wufei Ma", email = "wufeim@gmail.com" },
    { name = "Siyi Chen", email = "schen357@jhu.edu" },
]
classifiers=[
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy==1.26.4",
    "opencv-python",
    "scipy",
    "shapely",
    "matplotlib",
    "pycocotools",
    "seaborn",
    "tqdm",
    "black",
    "flake8",
    "psutil>=5.9"
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
interactive = ["questionary>=2.0"]
docs = ["sphinx", "pydata-sphinx-theme", "sphinx-design"]

[project.scripts]
lychsim = "lychsim.cli.main:main"
lychsim-mcp = "lychsim.mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
